--- a/app/src/main/res/layout/activity_inventory_info.xml
+++ b/app/src/main/res/layout/activity_inventory_info.xml
@@ -7,6 +7,7 @@
     tools:context=".addItem"
     android:background="@drawable/inventory_background">
 
+
     <TextView
         android:id="@+id/itemName"
         android:layout_width="wrap_content"
@@ -59,7 +60,7 @@
         android:layout_marginEnd="61dp"
         android:hint="12"
         android:ems="10"
-        android:inputType="numberDecimal"
+        android:inputType="number"
         />
 
     <EditText
