--- a/app/src/main/res/layout/activity_inventory_info.xml
+++ b/app/src/main/res/layout/activity_inventory_info.xml
@@ -38,37 +38,37 @@
         android:layout_marginTop="238dp"
         android:text="Unit" />
 
-    <EditText
+    <TextView
         android:id="@+id/itemNameEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="111dp"
+        android:layout_marginTop="136dp"
         android:layout_marginEnd="61dp"
         android:hint="egg"
         android:ems="10"
         android:inputType="textPersonName" />
 
-    <EditText
+    <TextView
         android:id="@+id/itemAmountEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="161dp"
+        android:layout_marginTop="187dp"
         android:layout_marginEnd="61dp"
         android:hint="12"
         android:ems="10"
         android:inputType="number"
         />
 
-    <EditText
+    <TextView
         android:id="@+id/itemUnitEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="211dp"
+        android:layout_marginTop="238dp"
         android:layout_marginEnd="61dp"
         android:ems="10"
         android:hint="cup, tablespoon, teaspoon"
