--- a/app/src/main/res/layout/activity_favorite__recipe.xml
+++ b/app/src/main/res/layout/activity_favorite__recipe.xml
@@ -8,7 +8,7 @@
     tools:context=".Recipe_Main">
 
     <ListView
-        android:id="@+id/recipe_listview"
+        android:id="@+id/fav_recipe_listview"
         android:layout_width="match_parent"
         android:layout_height="540dp"
         android:layout_alignParentStart="true"
@@ -17,18 +17,6 @@
         android:layout_marginTop="90dp"
         android:layout_marginBottom="110dp" />
 
-
-    <Button
-        android:id="@+id/add_button"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="338dp"
-        android:layout_marginRight="338dp"
-        android:layout_marginBottom="49dp"
-        android:background="@drawable/plus_square" />
 
     <TextView
         android:id="@+id/textView3"
@@ -59,7 +47,6 @@
         android:layout_marginStart="210dp"
         android:layout_marginTop="55dp"
         android:text="Favorite" />
-
     <Button
         android:id="@+id/home_button"
         android:layout_width="40dp"
@@ -73,6 +60,5 @@
         android:layout_marginBottom="660dp"
         android:layout_toStartOf="@+id/doneButton"
         android:background="@drawable/home_button" />
-
 
 </RelativeLayout>
