--- a/app/src/main/res/layout/activity_recipe_info.xml
+++ b/app/src/main/res/layout/activity_recipe_info.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/recipeInfoNameTV"
-        android:layout_width="0dp"
-        android:layout_height="58dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:background=" #5c7f89"
         android:gravity="center"
         android:text="TextView"
@@ -31,6 +31,7 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@id/ingredientLV"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipeInfoNameTV" />
 
@@ -58,6 +59,17 @@
         android:layout_width="142dp"
         android:layout_height="50dp"
         android:background="@drawable/make"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ingredientLV" />
+
+    <Button
+        android:id="@+id/favorite_BTN"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="1340dp"
+        android:layout_marginLeft="375dp"
+        android:background="@drawable/favorite_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ingredientLV" />
